--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-minstrel-s-curse_74635
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74635-h/images/cover.jpg
 creator:
   author:
     agent_name: Miller, Alex. McVeigh, Mrs.
@@ -14,6 +17,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/35103
     wikipedia: https://en.wikipedia.org/wiki/Mittie_Frances_Clarke_Point
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74635#The-minstrel-s-curse
 gutenberg_issued: '2024-10-24'
 gutenberg_type: Text
 identifiers:
